# ros2_robot_arm

./: .gitignore
square_drawer/: package.xml  setup.cfg  setup.py
writing_robot_control/: package.xml  setup.cfg  setup.py
writing_robot_control/writing_robot_control/: draw_square_koch.py  draw_square_sim.py  draw_square_sim.py.orig  draw_square_sim.py.v1  koch_v11_draw_square.py  koch_v11_ik_solver.py  (+2 more)
writing_robot_description/: package.xml  package.xml.orig  setup.cfg  setup.py  setup.py.orig
writing_robot_description/config/: controllers.yaml  koch_controllers.yaml  koch_v11_controllers.yaml  koch_v11_controllers_real.yaml
writing_robot_description/launch/: display_launch.py  koch_simulation.launch.py  koch_simulation_simple.launch.py  koch_v11_real_robot.launch.py  koch_v11_simulation.launch.py  simulation.launch.py
writing_robot_description/meshes/: Follower_Base_binary.stl  Follower_Elbow_To_Wrist_Extension_binary.stl  Follower_Elbow_To_Wrist_binary.stl  Follower_Gripper_Moving_Part_binary.stl  Follower_Gripper_Static_Part_binary.stl  Follower_Shoulder_Rotation_binary.stl  Follower_Shoulder_To_Elbow_binary.stl  fr12_s102.stl
writing_robot_description/rviz/: koch_v11_rviz_config.rviz  view_robot.rviz
writing_robot_description/urdf/: koch_v11_arm.urdf  koch_v11_arm_real.urdf  koch_v11_robot_arm.urdf  koch_v11_robot_arm.urdf.xacro  koch_writing_arm.urdf  robot_arm.urdf  robot_arm.urdf.simple  robot_arm_ros2control.urdf
writing_robot_description/writing_robot_description/: drawing_visualizer.py  drawing_visualizer.py.orig  robot_description_publisher.py
